--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,18 @@ version = "0.1.0"
 authors = ["micheled <me@thisisdurante.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+wasm-bindgen = "0.2.68"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'Document',
+    'Element',
+    'HtmlElement',
+    'Node',
+    'Window',
+]
