--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.*"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["--enable-mutable-globals"]
+
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
