--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bcrypt_decoder"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["micheled <me@thisisdurante.com>"]
 edition = "2018"
 
@@ -8,7 +8,8 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.*"
+wasm-bindgen = "^0.2"
+base64 = "^0.13"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["--enable-mutable-globals"]
